[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/outros/foto_frente.png" type="Texture" id=1]
[ext_resource path="res://scripts/outros/foto.gd" type="Script" id=2]
[ext_resource path="res://assets/temas/botao_start_scene.tres" type="Theme" id=3]
[ext_resource path="res://assets/outros/seta_direita_n_selecionada.png" type="Texture" id=4]
[ext_resource path="res://assets/outros/seta_esquerda_n_selecionada.png" type="Texture" id=5]
[ext_resource path="res://assets/outros/seta_esquerda_selecionada.png" type="Texture" id=6]
[ext_resource path="res://assets/outros/seta_esquerda_selecionavel.png" type="Texture" id=7]
[ext_resource path="res://assets/outros/seta_direita_selecionavel.png" type="Texture" id=8]
[ext_resource path="res://assets/outros/seta_direita_selecionada.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("imagem:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 142, 20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("imagem:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 195, 215 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("imagem:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("botoes:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("imagem:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("backgorund:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.784314 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("backgorund:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "abri_foto"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("imagem:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.05, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 392, 96 ), Vector2( 142, 20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("imagem:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.05, 0.05 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("botoes:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("imagem:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.04996 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("backgorund:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.784314 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("backgorund:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "fechar_foto"
length = 0.35
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("imagem:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 142, 20 ), Vector2( 392, 96 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("imagem:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.05, 0.05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("botoes:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("imagem:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("backgorund:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.08, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.784314 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("backgorund:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="foto" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="backgorund" type="ColorRect" parent="."]
visible = false
margin_right = 480.0
margin_bottom = 288.0
color = Color( 0, 0, 0, 0.784314 )

[node name="imagem" type="TextureRect" parent="."]
visible = false
margin_left = 142.0
margin_top = 20.0
margin_right = 337.0
margin_bottom = 235.0
texture = ExtResource( 1 )

[node name="botoes" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_top = 248.0
margin_bottom = 248.0

[node name="sete_direita" type="TextureButton" parent="botoes"]
margin_left = 260.0
margin_right = 269.0
margin_bottom = 8.0
texture_normal = ExtResource( 8 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 9 )

[node name="sete_esquerda" type="TextureButton" parent="botoes"]
margin_left = 232.0
margin_right = 250.0
margin_bottom = 14.0
texture_normal = ExtResource( 7 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 6 )

[node name="fechar" type="Button" parent="botoes"]
margin_left = 232.0
margin_top = 16.0
margin_right = 280.0
margin_bottom = 25.0
theme = ExtResource( 3 )
text = "fechar"

[node name="animation_player" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/abri_foto = SubResource( 2 )
anims/fechar_foto = SubResource( 3 )

[connection signal="pressed" from="botoes/sete_direita" to="." method="_on_sete_direita_pressed"]
[connection signal="pressed" from="botoes/sete_esquerda" to="." method="_on_sete_esquerda_pressed"]
[connection signal="pressed" from="botoes/fechar" to="." method="_on_fechar_pressed"]
